--- a/learn-rails/Gemfile
+++ b/learn-rails/Gemfile
@@ -6,7 +6,6 @@ gem 'rails', '4.2.5'
 
 # Rails defaults
 # ----------------------------------------------
-gem 'sqlite3'
 gem 'sass-rails', '~> 5.0'
 gem 'uglifier', '>= 1.3.0'
 gem 'coffee-rails', '~> 4.1.0'
@@ -17,10 +16,11 @@ gem 'turbolinks'
 gem 'jbuilder', '~> 2.0'
 # bundle exec rake doc:rails generates the API under doc/api.
 #gem 'sdoc', '~> 0.4.0', group: :doc
-gem 'byebug'
-gem 'web-console', '~> 2.0'
-gem 'spring'
-
+group :development, :test do
+  gem 'byebug'
+  gem 'web-console', '~> 2.0'
+  gem 'spring'
+end
 # learn rails gems
 #------------------------------------------------
 # for foundation front-framework
@@ -35,4 +35,9 @@ group :development do
   gem 'better_errors' # helps when things go wrong
   gem 'quiet_assets'  # suppresses distractin messages in the log
   gem 'rails_layout'  # generates files for an application layout
+  gem 'sqlite3'
+end
+group :production do
+  gem 'pg'
+  gem 'rails_12factor'
 end
